--- a/glibc/sysdeps/riscv/rv64/soft-fp/Makefile
+++ b/glibc/sysdeps/riscv/rv64/soft-fp/Makefile
@@ -1,3 +1,8 @@
 ifeq ($(subdir),math)
 CPPFLAGS += -I../soft-fp
 endif
+
+ifeq ($(subdir),stdlib)
+CPPFLAGS += -I../soft-fp
+sysdep_routines += floatditf floatunditf fixtfdi fixunstfdi
+endif
