--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = ../esp-binutils-gdb.git
 [submodule "riscv-gcc"]
 	path = riscv-gcc
-	url = ../riscv-gcc.git
+	url = git://github.com/riscv/riscv-gcc.git
 [submodule "riscv-glibc"]
 	path = riscv-glibc
 	url = git://github.com/riscv/riscv-glibc.git
