--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = ../riscv-glibc.git
 [submodule "riscv-dejagnu"]
 	path = riscv-dejagnu
-	url = ../riscv-dejagnu.git
+	url = git://github.com/riscv/riscv-dejagnu.git
