--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = git://github.com/riscv/riscv-glibc.git
 [submodule "riscv-dejagnu"]
 	path = riscv-dejagnu
-	url = ../riscv-dejagnu.git
+	url = git://github.com/riscv/riscv-dejagnu.git
 [submodule "riscv-newlib"]
 	path = riscv-newlib
 	url = git://github.com/riscv/riscv-newlib.git
